# Unsupervised-Pre-Training-for-3D-Leaf-Instance-Segmentation

./: CMakeLists.txt  Makefile  README.md  train.py
config/: config.yaml
datasets/: datasets.py
models/: loss.py  minkunet.py  model.py
utils/: graph.py  post_processing.py  utils.py
voxel_hash_map/: CMakeLists.txt  pybind.cpp  voxel_hash_map.cpp  voxel_hash_map.h  voxelize.py
